feat: change core lib

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "Raman Lauryniuk <romanrostislavovich@gmail.com>",
     "name": "react-intl-lint",
-    "version": "1.0.4",
+    "version": "1.1.0",
     "description": "Simple tools for check `react-intl` keys in app",
     "license": "MIT",
     "repository": "svoboda-rabstvo/react-intl-lint",
@@ -77,45 +77,28 @@
         ]
     },
     "dependencies": {
-        "chalk": "^2.4.2",
-        "commander": "^2.20.0",
-        "conventional-cli": "^1.2.0",
-        "dir-glob": "^3.0.1",
-        "fs": "0.0.1-security",
-        "glob": "^7.1.4",
-        "lodash": "^4.17.20",
-        "ngast": "^0.6.2",
-        "path": "^0.12.7",
-        "rxjs": "^6.5.4",
-        "string-similarity": "^4.0.1",
-        "typescript": "^4.1.2"
+      "chalk": "^5.6.2",
+      "commander": "^14.0.1",
+      "conventional-cli": "^1.2.0",
+        "ngx-translate-lint": "^1.26.1"
     },
     "devDependencies": {
-        "@semantic-release/changelog": "^3.0.2",
-        "@semantic-release/git": "^7.0.8",
-        "@types/chai": "^4.1.7",
-        "@types/chalk": "^2.2.0",
-        "@types/commander": "^2.12.2",
-        "@types/dir-glob": "^2.0.0",
-        "@types/glob": "^7.1.1",
-        "@types/lodash": "^4.14.132",
-        "@types/mocha": "^5.2.6",
-        "@types/node": "^12.0.2",
-        "@types/sinon": "^7.0.11",
+        "@types/chai": "^5.2.2",
+        "@types/dir-glob": "^2.0.3",
+        "@types/lodash": "^4.17.20",
+        "@types/mocha": "^10.0.10",
         "@types/string-similarity": "^3.0.0",
         "chai": "^4.2.0",
-        "env-cmd": "^10.1.0",
-        "gulp": "^4.0.2",
-        "gulp-copy": "^4.0.1",
+        "gulp": "^5.0.1",
+        "gulp-copy": "^5.0.0",
         "husky": "^2.3.0",
-        "markdownlint-cli": "^0.16.0",
-        "mocha": "^8.2.1",
-        "nyc": "^14.1.1",
-        "semantic-release": "^17.3.7",
+        "markdownlint-cli": "^0.45.0",
+        "mocha": "^11.7.4",
+        "nyc": "^17.1.0",
         "sinon": "^7.3.2",
         "ts-node": "^10.6.0",
         "tslint": "^5.11.0",
-        "typedoc": "^0.15.0",
-        "typescript": "^4.1.2"
+        "typedoc": "^0.28.13",
+        "typescript": "^5.9.3"
     }
 }
